
JasperReports Change Log
===================================

JasperReports 0.6.3
-----------------------------------
- new <box> tag available for putting border around text and image elements
with independent properties such as color, style and padding on all four sides;

- minor bug fixes and improvements;




JasperReports 0.6.2
-----------------------------------
- added support for import statements in order to eliminate 
the need to use complete class names inside report expressions;

- new "resourceBundle" attribute and new build-in REPORT_LOCALE and 
REPORT_RESOURCE_BUNDLE report parameters, to allow associating 
a ResourceBundle and a Locale with the report design when filling it with data;

- new $R{...} syntax available inside report expressions to access the
resource bundle information based on resource keys;

- new built-in msg() and str() functions to allow formatting messages in
different languages inside the report expressions;

- support for right-to-left writing (like Arabic and Hebrew);

- new "hyperlinkTarget" attribute available for hyperlink elements
in order to allow opening documents in a new window;

- minor bug fixes and improvements;




JasperReports 0.6.1
-----------------------------------
- new "lastPageFooter" report section added to simplify the creation of some
special report designs;

- new sample "barbecue" added to show how to render barcodes using 
the Barbecue open source library;

- new "Go To Page" option available in the viewer's toolbar;

- minor bug fixes and improvements;




JasperReports 0.6.0
-----------------------------------
- the package name hierarchy has changed throughout the entire library.
The now obsolete root package called "dori.jasper" was replaced by "net.sf.jasperreports"
for standardization reasons;

- new net.sf.jasperreports.engine.JRRenderable interface supported in the image expression
to improve the quality of charts and other SVG images. The patch, initially proposed by